--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,20 @@
 {
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@types/koa": "^2.13.12",
+    "@koa/router": "^12.0.1",
     "koa": "^2.15.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "koa-bodyparser": "^4.4.1",
+    "koa2-cors": "^2.0.6",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.6.5"
   }
 }
