--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -24,7 +24,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "src/api/index.ts"],
   "exclude": ["node_modules"], // 新增
   "references": [{ "path": "./tsconfig.node.json" }]
 }
