--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@koa/router": "^12.0.1",
+    "express": "^4.18.2",
     "koa": "^2.15.0",
     "koa-bodyparser": "^4.4.1",
     "koa2-cors": "^2.0.6",
